--- a/basekotlin/build.gradle
+++ b/basekotlin/build.gradle
@@ -84,7 +84,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:${libs.glide}"
 
     //fragment和RecycleViewAdapter管理库
-    api 'com.github.xuantiandaozun:fragmentation-androidx:0.0.1'
+    //api 'com.github.xuantiandaozun:fragmentation-androidx:0.0.1'
+    api 'me.yokeyword:fragmentationx:1.0.1'
     implementation "com.github.CymChad:BaseRecyclerViewAdapterHelper:${libs.BaseRecyclerViewAdapterHelper}"
 
     //网络请求
